offline payment update.

--- a/components/abusereport-1/mg/abusereport_mg_view.css
+++ b/components/abusereport-1/mg/abusereport_mg_view.css
@@ -8,7 +8,7 @@
 .abusereport_mg_view a:hover {
 	color: #000 !important;
 }
-.abusereport_mg_view a.submit_button {
+.abusereport_mg_view a.btn.btn-primary {
 	color: white !important;
 }
 .abusereport_mg_view .case {
