--- a/components/billing-4/billing_user/billing_user_list.css
+++ b/components/billing-4/billing_user/billing_user_list.css
@@ -12,6 +12,7 @@
 	border-width: 1px 0 1px 0;
 	text-align: center;
 	vertical-align: middle;
+	font-size: 12px;
 }
 .billing_userpanel_list th {
 	background-color: #f7f7f7;
