--- a/components/postgah/pgItem/pgItem_display/pgItem_display_related.css
+++ b/components/postgah/pgItem/pgItem_display/pgItem_display_related.css
@@ -43,4 +43,8 @@
 .pgItem_display_related > a.suggest_as_related > img {
 	border: 1px solid #ffb4b4;
 }
+.pgItem_display_related > a.suggest_as_related > span {
+	color: red;
+}
+
 
