--- a/components/contact-3/contact_view/contact_vw_form.css
+++ b/components/contact-3/contact_view/contact_vw_form.css
@@ -1,11 +1,17 @@
 
+/* -spi- */
+
 .contact_vw_form {
 	padding: 5%;
 }
 .contact_vw_form .path {
 	line-height: 25px !important;
-	margin-top: -30px;
+	margin-top: 30px;
 	margin-bottom: 35px;
+
+	border-radius: 4px;
+    border: 1px solid #cccccc;
+    padding: 30px;
 }
 .contact_vw_form .path * {
 	line-height: 25px !important;
