--- a/components/slidy-1/slidy.css
+++ b/components/slidy-1/slidy.css
@@ -6,8 +6,8 @@
 .slidy > .main {
 	transition: all 0.8s;
 }
-.slidy > .main > img {
-	max-width: 100vw;
+.slidy > .main > a > img {
+	max-width: 100%;
 	height: auto;
 	border-radius: 5px;
 	opacity: 0.0;
