--- a/components/main-3/fa-blink.css
+++ b/components/main-3/fa-blink.css
@@ -7,10 +7,12 @@
 	100% { opacity: 0; }
  }
 .fa-blink {
+	/* margin: 0 -10px 0 10px; */
+/* 	clear: both;
    -webkit-animation: fa-blink 1.4s linear infinite;
    -moz-animation: fa-blink 1.4s linear infinite;
    -ms-animation: fa-blink 1.4s linear infinite;
    -o-animation: fa-blink 1.4s linear infinite;
-   animation: fa-blink 1.4s linear infinite;
+   animation: fa-blink 1.4s linear infinite; */
 }
 
