--- a/components/listmaker_form-1/listmaker_form_element_this/listmaker_form_element_this_types/listmaker_form_element_this_checkbox.css
+++ b/components/listmaker_form-1/listmaker_form_element_this/listmaker_form_element_this_types/listmaker_form_element_this_checkbox.css
@@ -6,9 +6,10 @@
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
+    font-size: 12px;
 }
 .lmfe_inDiv.checkbox > label {
-	padding: 3px 10px;
+	/* padding: 3px 10px; */
 }
 .lmfe_inDiv.checkbox > label > input[type="checkbox"] {
 	top: 0px;
