--- a/components/postgah/pgItem/pgItem_list/pgItem_item_list_this.css
+++ b/components/postgah/pgItem/pgItem_list/pgItem_item_list_this.css
@@ -69,6 +69,12 @@ a.pgIilt.pin_in_own_cat {
 	border: 2px solid #f9cccc;
 }
 
+a.pgIilt > .text .cell_verified_icon {
+	height: 36px;
+	position: absolute;
+    left: 13px;
+    top: 5px;
+}
 
 
 
