--- a/components/postgah/pgItem/pgItem_list/pgItem_item_list_this.css
+++ b/components/postgah/pgItem/pgItem_list/pgItem_item_list_this.css
@@ -27,38 +27,39 @@ a.pgIilt > .text > * {
 	position: absolute;
 }
 a.pgIilt > .text > .name {
-	top: 20px;
-	right: 150px;
+	top: 12px;
+	right: 142px;
 	font-size: 14px;
 	width: 70%;
 	height: 24px;
 	overflow: hidden;
 }
 a.pgIilt > .text > .cat {
-	top: 50px;
-	right: 150px;
+	top: 38px;
+	right: 142px;
 	color: #aaa;
 	font-size: 12px;
 }
 a.pgIilt > .text > .pos {
-	bottom: 20px;
-	right: 150px;
+	bottom: 25px;
+	right: 142px;
 	font-size: 12px;
 	color: #aaa;
 }
 a.pgIilt > .text > .price {
-	top: 20px;
-	left: 20px;
-	color: green;
-	font-size: 12px;
-	background-color: white;
-	padding: 0 20px 20px 0;
+    bottom: 12px;
+    left: 12px;
+    color: green;
+    font-size: 12px;
+    font-weight: bold;
 }
 a.pgIilt > .text > .date {
-	bottom: 20px;
-	left: 20px;
+    background-color: white;
+	top: 16px;
+	left: 12px;
 	font-size: 10px;
 	color: #aaa;
+	padding: 0 20px 20px 0;
 }
 
 .pgItem_item_list .listmaker_list_paging {
@@ -72,8 +73,8 @@ a.pgIilt.pin_in_own_cat {
 a.pgIilt > .text .cell_verified_icon {
 	height: 42px;
 	position: absolute;
-    left: 13px;
-    top: 5px;
+    left: calc(50% - 100px);
+    top: 60px;
 }
 
 
