--- a/components/billing-4/billing_mg/billing_mg_user/billing_mg_user_invoicelist.css
+++ b/components/billing-4/billing_mg/billing_mg_user/billing_mg_user_invoicelist.css
@@ -9,7 +9,7 @@
 	color: #888;
 }
 .billing_mg_user_invoicelist .info .name {
-	font-size: 18px;
+	font-size: 16px;
 	width: 40%;
 	text-align: right;
 }
@@ -92,4 +92,8 @@
 	font-size: 22px;
 }
 
+.billing_mg_user_invoicelist .invoices .the_head_w .new_invoice {
+	float: left;
+	font-size: 12px;
+}
 
